@@ -23,11 +23,6 @@
 #include "be_visitor_structure/cdr_op_cs.h"
 #include "be_visitor_union/cdr_op_cs.h"
 
-ACE_RCSID (be_visitor_field,
-           cdr_op_cs,
-           "$Id$")
-
-
 // **********************************************
 //  visitor for field in the client stubs file
 // **********************************************
@@ -859,7 +854,7 @@ be_visitor_field_cdr_op_cs::visit_union (be_union *node)
 
 be_visitor_cdr_op_field_decl::be_visitor_cdr_op_field_decl (
       be_visitor_context *ctx)
-  : be_visitor_decl (ctx)
+  : be_visitor_scope (ctx)
 {
 }
 
